objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Accepted_terms_and_conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact has agreed to our terms when completing a form on the ENSI website</inlineHelpText>
        <label>Accepted terms and conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_to_Consultant_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has access to the ENS consultant area on website</inlineHelpText>
        <label>Access to Consultant Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_to_Resources_on_web__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has access to Negotium and Articles on the website</description>
        <inlineHelpText>Has access to Negotium and Articles on the website</inlineHelpText>
        <label>Access to Resources on web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_to_Staff_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has access to the ENS Staff area on the website</inlineHelpText>
        <label>Access to Staff Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_GROUP__c</fullName>
        <formula>Account.Account_GROUP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account GROUP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_program_book_type__c</fullName>
        <formula>TEXT(Last_Job_ID__r.Advanced_program_book_type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advanced program book type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_email__c</fullName>
        <inlineHelpText>secondary email address</inlineHelpText>
        <label>Alternate email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>As_NAM_Consulting_Retainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As NAM Consulting / Retainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>As_NAM_Facilitator__c</fullName>
        <formula>As_NAM_last_legacy_Job__r.Presenters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As NAM Facilitator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_NAM_Org_Transformation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As NAM Org. Transformation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>As_NAM_Training_Incompany__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As NAM Training Incompany</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>As_NAM_largest_Opportunity_value__c</fullName>
        <label>As NAM largest Opportunity value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_NAM_last_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>As NAM last Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>As_NAM_last_Opportunity_closed_lost__c</fullName>
        <label>As NAM last Opportunity closed lost</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_NAM_last_Opportunity_country__c</fullName>
        <label>As NAM last Opportunity country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Listing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>As_NAM_last_Opportunity_days__c</fullName>
        <label>As NAM last Opportunity days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>As_NAM_last_Opportunity_stage__c</fullName>
        <label>As NAM last Opportunity stage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_NAM_last_Opportunity_start_date__c</fullName>
        <label>As NAM last Opportunity start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>As_NAM_last_Opportunity_value__c</fullName>
        <label>As NAM last Opportunity value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_NAM_last_legacy_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>As NAM last legacy Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Contacts (As NAM Last Job)</relationshipLabel>
        <relationshipName>NAMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>As_NAM_last_legacy_Job_status__c</fullName>
        <description>Used for list segmentation.</description>
        <label>As NAM last legacy Job status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_PAX_Open_Course_Berlin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As PAX Open Course Berlin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>As_PAX_Open_Course_Refresher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As PAX Open Course Refresher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>As_PAX_Open_Course_level_attained__c</fullName>
        <label>As PAX Open Course level attained</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>As_PAX_Open_Course_level_score__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>As PAX Open Course level score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>As_PAX_Org_Transformation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As PAX Org. Transformation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>As_PAX_Training_Incompany__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As PAX Training Incompany</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned CSM</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Assigned CSM)</relationshipLabel>
        <relationshipName>Assigned_CSMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person must be added as a contact in salesforce</inlineHelpText>
        <label>Assistant Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Assistant Name)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person must be added as a contact in salesforce</inlineHelpText>
        <label>Assistant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Assistant Name)</relationshipLabel>
        <relationshipName>Contactass</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brite_Verify_email_status__c</fullName>
        <label>Brite Verify email status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDP_C_Master_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDP-C Master Trainer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (CDP-C Master Trainer)</relationshipLabel>
        <relationshipName>Contacts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDP_C__c</fullName>
        <inlineHelpText>Enter the date the ENS Licensee completed the CDP-F</inlineHelpText>
        <label>CDP-C Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDP_F_Certificate_Awared__c</fullName>
        <inlineHelpText>Check the box when a CDP-F certificate has been awarded</inlineHelpText>
        <label>CDP-F Accreditation Certificate Awarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDP_F_Date__c</fullName>
        <inlineHelpText>Enter the first date the ENS Licensee completed the CDP-F</inlineHelpText>
        <label>CDP-F Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDP_F_Master_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDP-F Master Trainer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (CDP-F Master Trainer)</relationshipLabel>
        <relationshipName>Contacts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDP_V_Accreditation_Date__c</fullName>
        <inlineHelpText>Enter the date the ENS Licensee was CDP-V Accredited</inlineHelpText>
        <label>CDP-V Accreditation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSM_Email_address__c</fullName>
        <formula>IF(
ISBLANK(Last_Job_ID__r.CSM_Email__c) = False,
Last_Job_ID__r.CSM_Email__c,
Last_Job_ID__r.Owner_email__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Email address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement_Signed__c</fullName>
        <inlineHelpText>enter the date the Confidentiality Agreement was signed</inlineHelpText>
        <label>Confidentiality Agreement Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consultant_Photo__c</fullName>
        <label>Consultant Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Consulting_Accreditation_Cert_Awarded__c</fullName>
        <inlineHelpText>Check the box when a CDP-C or Consulting Assesment certificate has been awarded</inlineHelpText>
        <label>Consulting Accreditation Cert Awarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consulting_Accreditation_Date__c</fullName>
        <inlineHelpText>Enter the date the ENS Licensee was CDP_ C Accredited</inlineHelpText>
        <label>Consulting Accreditation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_ID_Lookup__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Csm_Comments__c</fullName>
        <label>CSM Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customs_Info__c</fullName>
        <formula>Account.Customs_Info__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this field is updated on the account. Includes German EORI number or Tax IDs required for customs for overseas deliveries</inlineHelpText>
        <label>Customs Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Security_Agreement__c</fullName>
        <inlineHelpText>This represents the fact that our Network Members / Staff have agreed to protection of our clients data.</inlineHelpText>
        <label>Data Security Agreement</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Accredited__c</fullName>
        <description>Records the date that the consultant was accredited</description>
        <inlineHelpText>Records the date that the Consultant or In-house Trainer was accredited</inlineHelpText>
        <label>Date Accredited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_not_market_OC_to_this_account_until__c</fullName>
        <formula>Account.Do_not_market_OC_to_this_account_until__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do not market OC to this account until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENSCampaign_Closed_Reason__c</fullName>
        <description>For Targets with ENSCampaign_Status = Closed, specify the reason the Target was closed off the ENSCampaign.</description>
        <inlineHelpText>Specify why the lead has been closed</inlineHelpText>
        <label>ENS Lead Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Could Not Contact</fullName>
                </value>
                <value>
                    <fullName>Left / Moved</fullName>
                </value>
                <value>
                    <fullName>Blocked by Gatekeeper</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Referral(s) Provided</fullName>
                </value>
                <value>
                    <fullName>Meeting Held - No Interest</fullName>
                </value>
                <value>
                    <fullName>Follow Up as Suspect</fullName>
                </value>
                <value>
                    <fullName>Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>Public Program Registration</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Price too high</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENSCampaign_Date_Added__c</fullName>
        <inlineHelpText>Date that Contact was added as a Lead</inlineHelpText>
        <label>ENS Lead Added Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENSCampaign_Gatekeeper_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Where ENSCampaign_Status = &apos;Blocked by Gatekeeper&apos; this field identifies the name of the gatekeeper (usually the PA).</description>
        <inlineHelpText>Where ENSCampaign_Status = &apos;Blocked by Gatekeeper&apos; this field identifies the name of the gatekeeper (usually the PA).</inlineHelpText>
        <label>ENSCampaign Gatekeeper Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ENSCampaign Gatekeeper</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENSCampaign_Name__c</fullName>
        <formula>&quot;Deprecated&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ENSCampaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENSCampaign_Next_Contact__c</fullName>
        <description>Where ENSCampaign status = &apos;Deferred Contact&apos; this specifies the date by which next contact should be made.</description>
        <inlineHelpText>Where ENSCampaign status = &apos;Deferred Contact&apos; this specifies the date by which next contact should be made.</inlineHelpText>
        <label>ENSCampaign Next Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENSCampaign_Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Where ENSCampaign Status = Closed and the reason is that an ENSOpportunity has been created, this identifies the ID of the opportunity.</description>
        <inlineHelpText>Where ENS Lead Status = Closed and the reason is that an ENSOpportunity has been created, this identifies the ID of the opportunity.</inlineHelpText>
        <label>ENS Lead Opportunity ID</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Targets Related to this Opportunity</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENSCampaign_Opportunity_Name__c</fullName>
        <formula>&quot;Deprecated&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ENSCampaign Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENSCampaign_Opportunity_Status__c</fullName>
        <formula>&quot;Deprecated&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ENS Lead Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENSCampaign_Overall_Status__c</fullName>
        <description>Records whether a Contact within a Campaign is Open, Closed (No Opp) or Opportunity Status</description>
        <formula>IF (LEN( TEXT(ENSCampaign_Status__c))=0
    ,&quot;&quot;
    ,IF ( TEXT(ENSCampaign_Status__c) &lt;&gt; &quot;Closed&quot;
          , &quot;1. Open&quot;
          , CASE ( ENSCampaign_Closed_Reason__c 
                        ,&quot;Opportunity Created&quot;, &quot;3. Opportunity Created&quot;
                        , &quot;Public Program Registration&quot;, &quot;4. Public Program Registration&quot;
                         , &quot;2. Closed - No Opportunity&quot;
                         )
          )
     )</formula>
        <inlineHelpText>Records whether a Contact within a Campaign is Open, Closed (No Opp) or Opportunity Status</inlineHelpText>
        <label>ENS Lead Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENSCampaign_Overall_Summary__c</fullName>
        <formula>&quot;Deprecated&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ENS Lead Overall Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENSCampaign_Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Where a Target has come onto an ENSCampaign via Referral, this field identifies who referred them.</description>
        <inlineHelpText>Identifies who referred the contact to ENS. Contact must be in the database.</inlineHelpText>
        <label>ENS Lead Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals as Part of ENSCampaign</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENSCampaign_Source__c</fullName>
        <description>For Contacts who are a Target of an ENS Campaign (Record Type = Client Staff - Target), this identifies how they got on to the campaign:
* Referral - someone called during the campaign identified them as a referral
* Web - only for &apos;Contact Us&apos; or &apos;Public Program&apos; campaigns where enquiry is via Web
* Phone - only for &apos;Contact Us&apos; or &apos;Public Program&apos; campaigns where enquiry is via Phone
* List - was originally on the campaign list</description>
        <inlineHelpText>Identifies the method in which we were contacted</inlineHelpText>
        <label>ENS Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd party marketing</fullName>
                </value>
                <value>
                    <fullName>Contact Us</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Negotium</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>The Influencer</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENSCampaign_Status__c</fullName>
        <description>For contacts who are Targets of an ENSCampaign, identifies their current status within the campaign. NB picklist values will only appear if Contact Record Type = Client Staff - Target</description>
        <inlineHelpText>Identifies the lead status</inlineHelpText>
        <label>ENS Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Follow up required</fullName>
                </value>
                <value>
                    <fullName>Not Yet Contacted</fullName>
                </value>
                <value>
                    <fullName>Requested Information</fullName>
                </value>
                <value>
                    <fullName>Passed to a Network Member</fullName>
                </value>
                <value>
                    <fullName>Passed to a BDM</fullName>
                </value>
                <value>
                    <fullName>Information Sent</fullName>
                </value>
                <value>
                    <fullName>Deferred Contact</fullName>
                </value>
                <value>
                    <fullName>Interest in Meeting</fullName>
                </value>
                <value>
                    <fullName>Meeting Booked</fullName>
                </value>
                <value>
                    <fullName>Meeting Cancelled</fullName>
                </value>
                <value>
                    <fullName>Meeting Held (Not Closed)</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENSCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the ENSCampaign Name associated with this record (only applies if the record type is specified as Client Staff - Target)</description>
        <inlineHelpText>Specifies the ENSCampaign Name associated with this record (only applies if the record type is specified as Client Staff - Target)</inlineHelpText>
        <label>ENSCampaign</label>
        <referenceTo>ENSCampaign__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENSI_Staff_Type__c</fullName>
        <label>ENSI Staff Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development Manager</fullName>
                </value>
                <value>
                    <fullName>Client Services Assistant</fullName>
                </value>
                <value>
                    <fullName>Client Services Coordinator</fullName>
                </value>
                <value>
                    <fullName>Client Services Manager</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Network Relationship Manager</fullName>
                </value>
                <value>
                    <fullName>Data record</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENS_Lead_Closed_Date__c</fullName>
        <inlineHelpText>Enter the date the lead is updated as closed
A rule will update the closed date if you forget</inlineHelpText>
        <label>ENS Lead Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENS_Lead_New_Existing_Known__c</fullName>
        <inlineHelpText>Select if the Contact is New to ENS, an Existing Client or Known to ENS (suspect, on the Negotium list)</inlineHelpText>
        <label>ENS Lead New/Existing/Known</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENS_Lead_Opportunity_Training_Type__c</fullName>
        <formula>&quot;Deprecated&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ENS Lead Opportunity Training Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENS_Lead_Passed_to_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if the lead has been passed to a network member</inlineHelpText>
        <label>ENS Lead Passed to Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENS_Lead_Passed_to_a_BDM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if the lead has been passed to the BDM Team</inlineHelpText>
        <label>ENS Lead Passed to a BDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENS_Lead_Reason_for_Enquiry__c</fullName>
        <label>ENS Lead Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>eLearning</fullName>
                </value>
                <value>
                    <fullName>In-house Training</fullName>
                </value>
                <value>
                    <fullName>Joining ENS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Public Program</fullName>
                </value>
                <value>
                    <fullName>Showcase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENS_Lead_Responsibility_Record_Type__c</fullName>
        <formula>&quot;Deprecated&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ENS Lead Responsibility Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENS_email_address_points_to__c</fullName>
        <inlineHelpText>Virtual ENS email address is redirected to this address.
If field is blank, consultants ENS address isn&apos;t redirected</inlineHelpText>
        <label>ENS email address points to</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Identifier__c</fullName>
        <description>Use for Contacts upload of new pax</description>
        <externalId>true</externalId>
        <label>Email Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <inlineHelpText>Contact name and phone number in case of Emergency</inlineHelpText>
        <label>Emergency Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Full name is for reports only not on user layout</description>
        <formula>FirstName  &amp; &quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full name is for reports only not on user layout</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Comments__c</fullName>
        <label>Insurance Comments</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Email__c</fullName>
        <inlineHelpText>GE 4/2/09: Used for migrating contacts from FMPro which contained invalid email addresses.</inlineHelpText>
        <label>Invalid Email</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_3_month_case_study_due__c</fullName>
        <formula>Last_Job_ID__r.X3_month_case_study_due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job 3 month case study due</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_6_week_case_study_due__c</fullName>
        <formula>Last_Job_ID__r.X6_week_case_study_due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job 6 week case study due</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Account_Name__c</fullName>
        <formula>Last_Job_ID__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_CSC_Title__c</fullName>
        <formula>IF(
ISBLANK(Last_Job_ID__r.CSM_Name__c) = True,
Last_Job_ID__r.Owner:User.Contact.Title,
Last_Job_ID__r.CSM_Name__r.Title
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job CSC Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_CSM_Name__c</fullName>
        <formula>IF(
ISBLANK(Last_Job_ID__r.CSM_Name__c) = True,
Last_Job_ID__r.Owner_name__c,
Last_Job_ID__r.CSM_Name__r.FirstName &amp; &quot; &quot; &amp; Last_Job_ID__r.CSM_Name__r.LastName 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job CSM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Certificate_Date__c</fullName>
        <formula>Last_Job_ID__r.Certificate_Date_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Certificate Date</label>
        <type>Text</type>
    </fields>
</CustomObject>